<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_ask_qstn"
            style="@style/bodyTextDark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_qstn_desc"
            style="@style/dialogText"/>

        <EditText
            android:id="@+id/question_i"
            style="@style/dialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ask_qstn_eg"
            android:inputType="text|textCapSentences"
            android:maxLines="2"
            android:maxLength="20"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_qstn_footer"
            style="@style/dialogText"/>

    </LinearLayout>
</ScrollView>