<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/upvote_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp">

        <TextView
            android:id="@+id/upvote_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:text="@string/upvote_label" />

        <ImageView
            android:id="@+id/upvote_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/upvote_label"
            app:srcCompat="@drawable/ic_thumb_up_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp">

        <TextView
            android:id="@+id/delete_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:text="@string/delete_label" />

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/delete_label"
            app:srcCompat="@drawable/ic_delete_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_answer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp">
        <TextView
            android:id="@+id/view_answer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:text="@string/view_answer" />

        <ImageView
            android:id="@+id/check_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/view_answer_label"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_check_circle_24dp" />

    </RelativeLayout>
</LinearLayout>